# nlp_workshop

./: .gitignore  LICENSE  Makefile  README.md  part1.ipynb  part2-25k.ipynb  part2.ipynb  part3.ipynb  pyproject.toml  requirements.txt  start.ipynb
files/: part1.html  part2-25k.html  part2.html  part3.html  start.html
